--- a/journal.html
+++ b/journal.html
@@ -23,86 +23,87 @@
     </header>
 <main>
       <h2 style="color: white; text-shadow: 1px 1px 2px black;">Psychology of the Internet Project</h2>
-      <p style="color: white; text-shadow: 1px 1px 2px black; margin-bottom: 24px; font-size: 14px;">A six-day journal exploring online behavior, identity, and the digital world.</p>
+      <p style="color: white; text-shadow: 1px 1px 2px black; margin-bottom: 24px; font-size: 14px;">Summaries and thoughts on learnings for my Psychology of the Internet course. All opinions are my own.</p>
 
       <details class="unit-folder" open>
-        <summary>Unit 1 (January 20 – January 25): Welcome to the Internet</summary>
+        <summary>Unit 1: Welcome to the Internet</summary>
         <div class="unit-content">
           <div class="journal-grid">
-            <article class="window"><div class="title-bar"><span>Day1.doc</span></div><div class="window-content"><strong>Day 1</strong><p style="font-size: 13px;">Entry here...</p></div></article>
-            <article class="window"><div class="title-bar"><span>Day2.doc</span></div><div class="window-content"><strong>Day 2</strong><p style="font-size: 13px;">Entry here...</p></div></article>
-            <article class="window"><div class="title-bar"><span>Day3.doc</span></div><div class="window-content"><strong>Day 3</strong><p style="font-size: 13px;">Entry here...</p></div></article>
-            <article class="window"><div class="title-bar"><span>Day4.doc</span></div><div class="window-content"><strong>Day 4</strong><p style="font-size: 13px;">Entry here...</p></div></article>
-            <article class="window"><div class="title-bar"><span>Day5.doc</span></div><div class="window-content"><strong>Day 5</strong><p style="font-size: 13px;">Entry here...</p></div></article>
-            <article class="window"><div class="title-bar"><span>Day6.doc</span></div><div class="window-content"><strong>Day 6</strong><p style="font-size: 13px;">Entry here...</p></div></article>
+            <article class="window"><div class="title-bar"><span>Day1.doc</span></div><div class="window-content"><strong>Day 1</strong><p style="font-size: 13px;">This course is designed in a way where you can succeed if you're self motivated and able to keep up with the pace. I think I'll try and work as much ahead as possible before the rest of my courses pick up. I'm excited to start this course! I think it'll be a good exercise on my self-motivation as well as my ability to stay organized.</p></div></article>
+            <article class="window"><div class="title-bar"><span>Day2.doc</span></div><div class="window-content"><strong>Day 2</strong><p style="font-size: 13px;">I learned a lot of information today. Most of it was a refresher, as I’m pretty technically adept. However, there were some specifics on Canvas I wasn’t aware of in this level of detail, such as how to embed videos into a discussion post and other things like that. I also learned how important it is to have a backup plan, specifically for internet access. Professors/Employers won’t always be super accommodating if my internet goes out, so I should always have a second plan in place. </p></div></article>
+            <article class="window"><div class="title-bar"><span>Day3.doc</span></div><div class="window-content"><strong>Day 3</strong><p style="font-size: 13px;">The Internet is just one invention that propelled society. People will always be adverse to change, but eventually I believe that people will grow used to it and it becomes normal. For example, we wouldn’t look twice if we saw someone putting erasers on pencils nowadays (I’d be more surprised if I saw a pencil without it), it’s so ingrained into our society now. I suppose that novelty becomes normal after some time, which can be seen as good or bad. I generally think that if it’s propelling our society forward, it’s good.</p></div></article>
+            <article class="window"><div class="title-bar"><span>Day4.doc</span></div><div class="window-content"><strong>Day 4</strong><p style="font-size: 13px;">I think that this course will give me good insight into how I operate as a student and as a human being. I’m making goals for myself that I plan on working hard on. I want to invest in myself as much as possible.</p></div></article>
+            <article class="window"><div class="title-bar"><span>Day5.doc</span></div><div class="window-content"><strong>Day 5</strong><p style="font-size: 13px;">AI tools are useful but not always correct. I should be citing my usage of them in my work as well as using them only for assistance, not for completion of entire assignments.</p></div></article>
+            <article class="window"><div class="title-bar"><span>Day6.doc</span></div><div class="window-content"><strong>Day 6</strong><p style="font-size: 13px;">Work in progress :D</p></div></article>
           </div>
         </div>
       </details>
 
       <details class="unit-folder">
-        <summary>Unit 2 (January 26 – February 1): Learning via the Internet</summary>
+        <summary>Unit 2: Learning via the Internet</summary>
         <div class="unit-content"><div class="journal-grid"></div></div>
       </details>
 
       <details class="unit-folder">
-        <summary>Unit 3 (February 2 – February 8): Educating via the Internet</summary>
+        <summary>Unit 3: Educating via the Internet</summary>
         <div class="unit-content"><div class="journal-grid"></div></div>
       </details>
 
       <details class="unit-folder">
-        <summary>Unit 4 (February 9 – February 15): Communicating via the Internet</summary>
+        <summary>Unit 4: Communicating via the Internet</summary>
         <div class="unit-content"><div class="journal-grid"></div></div>
       </details>
 
       <details class="unit-folder">
-        <summary>Unit 5 (February 16 – February 22): Broadcasting via the Internet</summary>
+        <summary>Unit 5: Broadcasting via the Internet</summary>
         <div class="unit-content"><div class="journal-grid"></div></div>
       </details>
 
       <details class="unit-folder">
-        <summary>Unit 6 (February 23 – March 1): Socializing on the Internet</summary>
+        <summary>Unit 6: Socializing on the Internet</summary>
         <div class="unit-content"><div class="journal-grid"></div></div>
       </details>
 
       <details class="unit-folder">
-        <summary>Unit 7 (March 2 – March 8): Emotion and the Internet</summary>
+        <summary>Unit 7: Emotion and the Internet</summary>
         <div class="unit-content"><div class="journal-grid"></div></div>
       </details>
 
       <details class="unit-folder">
-        <summary>Unit 8 (March 9 – March 15): Motivation and the Internet</summary>
+        <summary>Unit 8: Motivation and the Internet</summary>
         <div class="unit-content"><div class="journal-grid"></div></div>
       </details>
 
       <details class="unit-folder">
-        <summary>Unit 9 (March 16 – March 22): Perception & Attention to the Internet</summary>
+        <summary>Unit 9: Perception & Attention to the Internet</summary>
         <div class="unit-content"><div class="journal-grid"></div></div>
       </details>
 
       <details class="unit-folder">
-        <summary>Unit 10 (March 23 – March 29): Decision Making on the Internet</summary>
+        <summary>Unit 10: Decision Making on the Internet</summary>
         <div class="unit-content"><div class="journal-grid"></div></div>
       </details>
 
       <details class="unit-folder">
-        <summary>Unit 11 (April 6 – April 12): Development & Aging on the Internet</summary>
+        <summary>Unit 11: Development & Aging on the Internet</summary>
         <div class="unit-content"><div class="journal-grid"></div></div>
       </details>
 
       <details class="unit-folder">
-        <summary>Unit 12 (April 13 – April 19): Personality on the Internet</summary>
+        <summary>Unit 12: Personality on the Internet</summary>
         <div class="unit-content"><div class="journal-grid"></div></div>
       </details>
 
       <details class="unit-folder">
-        <summary>Unit 13 (April 20 – April 26): Clinical Psychology on the Internet</summary>
+        <summary>Unit 13: Clinical Psychology on the Internet</summary>
         <div class="unit-content"><div class="journal-grid"></div></div>
       </details>
 
       <details class="unit-folder">
-        <summary>Unit 14 (April 27 – May 3): Looking Forward on the Internet</summary>
+        <summary>Unit 14: Looking Forward on the Internet</summary>
         <div class="unit-content"><div class="journal-grid"></div></div>
       </details>
+      <p style="color: white; text-shadow: 1px 1px 2px black; margin-bottom: 24px; font-size: 14px;">Thank you for reading!</p>
     </main>
   </div>
   <script src="script.js"></script>
