--- a/journal.html
+++ b/journal.html
@@ -11,14 +11,15 @@
     <header>
       <div class="taskbar">
         <div style="font-weight: bold; font-size: 16px;"><a href="index.html" style="color: inherit; text-decoration: none;">Colin Luangrath</a></div>
-        <nav>
-          <a href="projects.html">Projects</a>
-          <a href="journal.html">Internet Psych</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
-          <a class="btn" href="resume.pdf" target="_blank">Resume.pdf</a>
-          <button class="btn" id="themeBtn">Toggle Theme</button>
-        </nav>
+          <nav>
+            <a href="projects.html" class="btn">Projects</a>
+            <a href="journal.html" class="btn">Internet Psych</a>
+            <a href="about.html" class="btn">About</a>
+            <a href="contact.html" class="btn">Contact</a>
+            <a class="btn" href="resume.pdf" target="_blank">Resume.pdf</a>
+            <button class="btn" id="resetBtn">Reset Windows</button>
+            <button class="btn" id="themeBtn">Toggle Theme</button>
+          </nav>
       </div>
     </header>
 <main>
