--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,11 @@
     <main>
       <article class="window" style="max-width: 600px; margin: 0 auto;">
         <div class="title-bar"><span>Contact.exe</span></div>
+          <div class="title-bar-controls">
+            <span class="title-bar-btn min-btn">_</span>
+            <span class="title-bar-btn max-btn">□</span>
+            <span class="title-bar-btn close-btn">X</span>
+          </div>
         <div class="window-content">
           <h3>Let's Connect</h3>
           <p>Want to collaborate or get in touch? Look no further.</p>
