--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
       <article class="window">
         <div class="title-bar">
           <span>Welcome.exe</span>
-          <div class="title-bar-controls">
-            <span class="title-bar-btn"></span><span class="title-bar-btn"></span><span class="title-bar-btn close-btn">X</span>
-          </div>
+            <div class="title-bar-controls">
+              <span class="title-bar-btn min-btn">_</span>
+              <span class="title-bar-btn max-btn">□</span>
+              <span class="title-bar-btn close-btn">X</span>
+            </div>
         </div>
         <div class="window-content">
           <h1>Hi! I'm Colin.</h1>
