--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,11 @@
       <div class="grid">
         <article class="window">
           <div class="title-bar"><span>DLIO_Performance.txt</span></div>
+            <div class="title-bar-controls">
+            <span class="title-bar-btn min-btn">_</span>
+            <span class="title-bar-btn max-btn">□</span>
+            <span class="title-bar-btn close-btn">X</span>
+            </div>
           <div class="window-content">
             <h3>Performance eval of DLIO</h3>
             <p style="font-size: 13px;">Scaling study for deep learning I/O on ALCF systems. Tools, traces, and visualizations.</p>
