--- a/contact.html
+++ b/contact.html
@@ -24,15 +24,17 @@
     </header>
     <main>
       <article class="window" style="max-width: 600px; margin: 0 auto;">
-        <div class="title-bar"><span>Contact.exe</span></div>
+        <div class="title-bar"><span>Contact.exe</span>
           <div class="title-bar-controls">
             <span class="title-bar-btn min-btn">_</span>
             <span class="title-bar-btn max-btn">□</span>
             <span class="title-bar-btn close-btn">X</span>
           </div>
+        </div>
+
         <div class="window-content">
           <h3>Let's Connect</h3>
-          <p>Want to collaborate or get in touch? Look no further.</p>
+          <p>Want to collaborate or get in touch? You're in the right place!</p>
           <div style="margin-top: 16px;">
             <a class="btn" href="mailto:colinluangrath@gmail.com">Email Me</a>
             <a class="btn" href="https://github.com/cluangrath4" target="_blank">GitHub</a>
@@ -48,5 +50,6 @@
     </div>
   </div>
   <script src="script.js"></script>
+  <div id="bottom-taskbar"></div>
 </body>
 </html>
