--- a/index.html
+++ b/index.html
@@ -22,40 +22,54 @@
         </nav>
       </div>
     </header>
-    <main class="hero">
+    <section class="hero">
       <article class="window">
         <div class="title-bar">
           <span>Welcome.exe</span>
+          <div class="title-bar-controls">
+            <span class="title-bar-btn min-btn">_</span>
+            <span class="title-bar-btn max-btn">□</span>
+            <span class="title-bar-btn close-btn">X</span>
+          </div>
+        </div>
+        <div class="window-content">
+          <h1>Hi — I’m Colin.</h1>
+          <p>Computer Science & Psychology student at UW–Madison. Interested in machine learning systems, human–AI interaction, and creative tools.</p>
+          <p><strong>Skills:</strong> Python, Machine Learning, Computer Systems & Architecture, Computer Vision, Game Design</p>
+          <div style="margin-top: 16px; display: flex; gap: 8px;">
+            <a class="btn" href="https://github.com/cluangrath4" target="_blank">GitHub</a>
+            <a class="btn" href="mailto:colinluangrath@gmail.com">Email</a>
+          </div>
+        </div>
+      </article>
+
+      <div style="display: flex; flex-direction: column; gap: 24px;">
+        
+        <aside class="window">
+          <div class="title-bar">
+            <span>System Properties</span>
             <div class="title-bar-controls">
               <span class="title-bar-btn min-btn">_</span>
               <span class="title-bar-btn max-btn">□</span>
               <span class="title-bar-btn close-btn">X</span>
             </div>
-        </div>
-        <div class="window-content">
-          <h1>Hi! I'm Colin.</h1>
-          <p>Computer Science & Psychology student at UW-Madison. Interested in machine learning systems, human-AI interaction, and creative tools.</p>
-          <p><strong>Skills:</strong> Python, Machine Learning, Computer Systems & Architecture, Computer Vision, Game Design</p>
-          <div style="margin-top: 16px; display: flex; gap: 8px;">
           </div>
-        </div>
-      </article>
+          <div class="window-content" style="text-align: center;">
+            <div style="width: 80px; height: 80px; background: #3a93ff; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 24px; font-weight: bold; margin: 0 auto 12px auto;">CL</div>
+            <strong>Colin Luangrath</strong>
+            <p style="font-size: 12px;">CS & Psychology — UW–Madison</p>
+            <p style="font-size: 12px; margin-top: 12px;">14+ Projects<br>Argonne Research Intern</p>
+          </div>
+        </aside>
 
-      <aside class="window">
-        <div class="title-bar">
-          <span>System Properties</span>
-          <div class="title-bar-controls"><span class="title-bar-btn close-btn">X</span></div>
-        </div>
-        <div class="window-content" style="text-align: center;">
-          <div style="width: 80px; height: 80px; background: #3a93ff; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 24px; font-weight: bold; margin: 0 auto 12px auto;">CL</div>
-          <strong>Colin Luangrath</strong>
-          <p style="font-size: 12px;">CS, Psychology, and Game Design @ UW-Madison</p>
-          <p style="font-size: 12px; margin-top: 12px;">10+ Projects<br>Center for Dairy Research</p>
-        </div>
         <article class="window">
           <div class="title-bar">
             <span>Now_Playing.exe</span>
-            <div class="title-bar-controls"><span class="title-bar-btn close-btn">X</span></div>
+            <div class="title-bar-controls">
+              <span class="title-bar-btn min-btn">_</span>
+              <span class="title-bar-btn max-btn">□</span>
+              <span class="title-bar-btn close-btn">X</span>
+            </div>
           </div>
           <div class="window-content" style="display: flex; gap: 12px; align-items: center;">
             <img id="now-playing-art" src="" onerror="this.onerror=null; this.src='https://win98icons.alexmeub.com/icons/png/cd_audio_cd_a-3.png';" style="width: 48px; height: 48px; background: #000; object-fit: cover; border: 1px solid #888;" alt="Album Art">
@@ -65,23 +79,27 @@
             </div>
           </div>
         </article>
-        <div class="window">
+
+        <article class="window">
           <div class="title-bar">
             <span>Library.txt</span>
             <div class="title-bar-controls">
+              <span class="title-bar-btn min-btn">_</span>
+              <span class="title-bar-btn max-btn">□</span>
               <span class="title-bar-btn close-btn">X</span>
             </div>
           </div>
           <div class="window-content">
             <strong>📚 Now Reading</strong>
             <div style="margin-top: 8px; font-size: 13px;">
-              <p style="margin-bottom: 4px;"><em>Lord of Mysteries Volume 2: Faceless</em></p>
-              <p style="margin: 0; color: #555;">by Cuttlefish That Loves Diving</p>
+              <p style="margin-bottom: 4px;"><em>The Design of Everyday Things</em></p>
+              <p style="margin: 0; color: #555;">by Don Norman</p>
             </div>
           </div>
-        </div>
-      </aside>
-    </main>
+        </article>
+
+      </div>
+    </section>
     <div style="margin-top: 32px; text-align: center; color: white; text-shadow: 1px 1px 2px black;">
       <label style="cursor: pointer; font-size: 14px;">
         <input type="checkbox" id="window-mode-toggle" checked> Enable Draggable Windows
@@ -89,5 +107,6 @@
     </div>
   </div>
   <script src="script.js"></script>
+  <div id="bottom-taskbar"></div>
 </body>
 </html>
