Minor fixes before I leave
yeah, I'm working on my website oh yeah I'm working on my website

--- a/projects.html
+++ b/projects.html
@@ -26,12 +26,13 @@
       <h2 style="color: white; text-shadow: 1px 1px 2px black;">Selected Projects</h2>
       <div class="grid">
         <article class="window">
-          <div class="title-bar"><span>DLIO_Performance.txt</span></div>
+          <div class="title-bar"><span>DLIO_Performance.txt</span>
             <div class="title-bar-controls">
-            <span class="title-bar-btn min-btn">_</span>
-            <span class="title-bar-btn max-btn">□</span>
-            <span class="title-bar-btn close-btn">X</span>
+              <span class="title-bar-btn min-btn">_</span>
+              <span class="title-bar-btn max-btn">□</span>
+              <span class="title-bar-btn close-btn">X</span>
             </div>
+          </div>
           <div class="window-content">
             <h3>Performance eval of DLIO</h3>
             <p style="font-size: 13px;">Scaling study for deep learning I/O on ALCF systems. Tools, traces, and visualizations.</p>
@@ -39,7 +40,13 @@
           </div>
         </article>
         <article class="window">
-          <div class="title-bar"><span>Web_Games.exe</span></div>
+          <div class="title-bar"><span>Web_Games.exe</span>
+            <div class="title-bar-controls">
+              <span class="title-bar-btn min-btn">_</span>
+              <span class="title-bar-btn max-btn">□</span>
+              <span class="title-bar-btn close-btn">X</span>
+            </div>
+          </div>
           <div class="window-content">
             <h3>Web-based games</h3>
             <p style="font-size: 13px;">Interactive games built for CURRIC 357 - Game Design 1</p>
@@ -47,7 +54,13 @@
           </div>
         </article>
         <article class="window">
-          <div class="title-bar"><span>YOLO_Detector.app</span></div>
+          <div class="title-bar"><span>YOLO_Detector.app</span>
+            <div class="title-bar-controls">
+              <span class="title-bar-btn min-btn">_</span>
+              <span class="title-bar-btn max-btn">□</span>
+              <span class="title-bar-btn close-btn">X</span>
+            </div>
+          </div>
           <div class="window-content">
             <h3>YOLO phone detector</h3>
             <p style="font-size: 13px;">Mobile object detection demo - real-time YOLO integration and UI.</p>
