--- a/index.html
+++ b/index.html
@@ -34,12 +34,10 @@
           </div>
         </div>
         <div class="window-content">
-          <h1>Hi — I’m Colin.</h1>
+          <h1>Hi - I’m Colin.</h1>
           <p>Computer Science & Psychology student at UW–Madison. Interested in machine learning systems, human–AI interaction, and creative tools.</p>
           <p><strong>Skills:</strong> Python, Machine Learning, Computer Systems & Architecture, Computer Vision, Game Design</p>
           <div style="margin-top: 16px; display: flex; gap: 8px;">
-            <a class="btn" href="https://github.com/cluangrath4" target="_blank">GitHub</a>
-            <a class="btn" href="mailto:colinluangrath@gmail.com">Email</a>
           </div>
         </div>
       </article>
@@ -59,7 +57,7 @@
             <div style="width: 80px; height: 80px; background: #3a93ff; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 24px; font-weight: bold; margin: 0 auto 12px auto;">CL</div>
             <strong>Colin Luangrath</strong>
             <p style="font-size: 12px;">CS & Psychology — UW–Madison</p>
-            <p style="font-size: 12px; margin-top: 12px;">14+ Projects<br>Argonne Research Intern</p>
+            <p style="font-size: 12px; margin-top: 12px;">10+ Projects<br>Argonne Research Assistant</p>
           </div>
         </aside>
 
@@ -93,8 +91,8 @@
           <div class="window-content">
             <strong>📚 Now Reading</strong>
             <div style="margin-top: 8px; font-size: 13px;">
-              <p style="margin-bottom: 4px;"><em>The Design of Everyday Things</em></p>
-              <p style="margin: 0; color: #555;">by Don Norman</p>
+              <p style="margin-bottom: 4px;"><em>Lord of Mysteries Volume 2: Faceless</em></p>
+              <p style="margin: 0; color: #555;">by Cuttlefish That Loves Diving</p>
             </div>
           </div>
         </article>
