--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
           <ul>
             <li>Summer 2024, 2025: Argonne National Lab - Machine Learning workload emulator (Research Assistant)</li>
             <li>Interests: ML systems, CV, HCI, HPC, Game Design</li>
-            <li>Current Obsessions: UI/UX, Computer Architecture, Trading Card Games, Bouldering</li>
+            <li>Current Obsessions: UI/UX Development, Web Scraping, Computer Architecture, Trading Card Games, Cooking, Novels</li>
           </ul>
         </div>
       </article>
