didn't like current window span functionality

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       </div>
     </header>
     <main>
-      <article class="window" style="max-width: 600px; margin: 0 auto;">
+      <article class="window">
         <div class="title-bar"><span>Contact.exe</span>
           <div class="title-bar-controls">
             <span class="title-bar-btn min-btn">_</span>
