--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       </div>
     </header>
     <main>
-      <article class="window" style="max-width: 600px; margin: 0 auto;">
+      <article class="window">
         
         <div class="title-bar">
           <span>About_Me.txt</span>
