updated currently working on projects

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
             </div>
           </div>
           <div class="window-content">
-            <h3>Performance eval of DLIO</h3>
+            <h3>Performance Evalutation of DLIO</h3>
             <p style="font-size: 13px;">Scaling study for deep learning I/O on ALCF systems. Tools, traces, and visualizations.</p>
             <a href="https://github.com/cluangrath4/dlio_ml_workloads/tree/main">View Repo</a>
           </div>
@@ -65,6 +65,21 @@
             <h3>YOLO phone detector</h3>
             <p style="font-size: 13px;">Mobile object detection demo - real-time YOLO integration and UI.</p>
             <a href="https://github.com/cluangrath4/TeamName">View Repo</a>
+          </div>
+        </article>
+        <article class="window">
+          <div class="title-bar"><span>Currently_Developing.txt</span>
+            <div class="title-bar-controls">
+              <span class="title-bar-btn min-btn">_</span>
+              <span class="title-bar-btn max-btn">□</span>
+              <span class="title-bar-btn close-btn">X</span>
+            </div>
+          </div>
+          <div class="window-content">
+            <h3>RecRadar</h3>
+            <p style="font-size: 13px;">Interactive tool made for UW-Madison students to see open play sports around campus.</p>
+            <h3>NameInDevelopment</h3>
+            <p style="font-size: 13px;">DavyBack & TrainingCourt inspired personal tracker + note taking for PTCG and OPTCG.</p>
           </div>
         </article>
       </div>
