--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
           <a href="journal.html" class="btn">Internet Psych</a>
           <a href="about.html" class="btn">About</a>
           <a href="contact.html" class="btn">Contact</a>
-          <a class="btn" href="resume.pdf" target="_blank">Resume.pdf</a>
+          <a class="btn" href="resume.pdf" target="_blank">Resume</a>
           <button class="btn" id="resetBtn">Reset Windows</button>
           <button class="btn" id="themeBtn">Toggle Theme</button>
         </nav>
