Update project description in index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div style="width: 80px; height: 80px; background: #3a93ff; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 24px; font-weight: bold; margin: 0 auto 12px auto;">CL</div>
             <strong>Colin Luangrath</strong>
             <p style="font-size: 12px;">CS & Psychology — UW–Madison</p>
-            <p style="font-size: 12px; margin-top: 12px;">10+ Projects<br>Argonne Research Assistant</p>
+            <p style="font-size: 12px; margin-top: 12px;">10+ Projects<br>Currently @ Wisconsin CDR</p>
           </div>
         </aside>
 
